--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@mui/material": "^5.11.10",
     "@supabase/supabase-js": "^2.12.1",
     "apexcharts": "^3.37.0",
+    "axios": "^1.3.4",
     "change-case": "^4.1.2",
     "date-fns": "^2.29.3",
     "history": "^5.3.0",
