--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,16 @@
 {
     "functions": {
       "api/import-standings.ts": {
-        "runtime": "@vercel/node@2.10.0"
+        "runtime": "@vercel/node@2.10.0",
+        "includeFiles": ".env",
+        "maxDuration": 10,
+        "memory": 1024
       }
+    },
+    "env": {
+        "REACT_APP_SUPABASE_URL": "@react_app_supabase_url",
+        "REACT_APP_SUPABASE_ANON_KEY": "@react_app_supabase_anon_key",
+        "REACT_APP_RAPID_KEY": "@react_app_rapid_key",
+        "API_KEY": "@api_key"
     }
-}
+  }
