--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
         "memory": 1024
       }
     },
+    "crons": [{
+      "path": "/api/import-standings.ts",
+      "schedule": "0 * * * *"
+    }],
     "env": {
         "REACT_APP_SUPABASE_URL": "@react_app_supabase_url",
         "REACT_APP_SUPABASE_ANON_KEY": "@react_app_supabase_anon_key",
